Updated discussion for version 0.96.0, more still to add.

--- a/tex/docs-structure.tex
+++ b/tex/docs-structure.tex
@@ -117,7 +117,7 @@
 \setcounter{secnumdepth}{4} % how many sectioning levels to assign numbers to
 \setcounter{tocdepth}{4}    % how many sectioning levels to show in ToC
 
-% Provide a way of counting user interface items without putting them in an
+% Provide a way of counting user-interface items without putting them in an
 % enumberation.
 
 \newcounter{ItemCounter}
