--- a/tex/seq64_kudos.tex
+++ b/tex/seq64_kudos.tex
@@ -41,7 +41,7 @@
          French translation for the desktop files.
       \item \textsl{Oli Kester}:
          The creator of \textsl{Kepler34}, from which we are getting
-         clues on porting the user interface to Qt 5 and Windows.
+         clues on porting the user-interface to Qt 5 and Windows.
    \end{itemize}
 
    Also some bug-reporters and testers:
