--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -845,7 +845,7 @@
 
    The \texttt{p} and \texttt{x} keys also works in the small event strip just
    above the white data area.  The Mod4-right-click feature does not
-   yet work in that aread of the user interface, but the \texttt{p} key does.
+   yet work in that aread of the user-interface, but the \texttt{p} key does.
 
 \paragraph{Editing Note Events}
 \label{paragraph:seq64_pattern_editor_note_events}
