--- a/tex/seq64_qt_portmidi.tex
+++ b/tex/seq64_qt_portmidi.tex
@@ -78,13 +78,13 @@
    PortMidi:
 
    \begin{enumerate}
-      \item A Gtkmm-2.4 user interface and PortMidi.  This version is
+      \item A Gtkmm-2.4 user-interface and PortMidi.  This version is
          Linux-only, and is useful for debugging the internal PortMidi code
-         without worrying about the Qt5 user interface.
-      \item A Qt 5 user interface and PortMidi on Linux.  This version is
+         without worrying about the Qt5 user-interface.
+      \item A Qt 5 user-interface and PortMidi on Linux.  This version is
          useful for people who like to experiment, and for debugging Qt5 and
          PortMidi issues at the same time.
-      \item A Qt 5 user interface and PortMidi on Windows.  This version is
+      \item A Qt 5 user-interface and PortMidi on Windows.  This version is
          basically working, but takes some special setup.
          See \sectionref{subsec:qt_portmidi_windows_setup} for details.
    \end{enumerate}
@@ -99,7 +99,7 @@
    Gtkmm-2.4 and Qt 5 versions of the application, as well as how to set up
    \textsl{Sequencer64 for Windows}.
 
-   We will not show all of the user interface elements, but we will mention
+   We will not show all of the user-interface elements, but we will mention
    some differences one will find.
 
 \subsection{The Qt 5 User Interface}
@@ -116,7 +116,7 @@
    The Gtkmm-2.4/RtMidi version (Linux only) will be referred to as
    \textbf{seq64}.
 
-   Here is a screenshot of the main user interface of \textsl{qpseq64}, with
+   Here is a screenshot of the main user-interface of \textsl{qpseq64}, with
    some of the patterns colored for emphasis.
 
 \begin{figure}[H]
