--- a/tex/seq64_song_editor.tex
+++ b/tex/seq64_song_editor.tex
@@ -51,7 +51,7 @@
    then is to click the pattern's label in the Song Editor.
    
    Both the Song Editor and the Patterns Panel both reflect the change in
-   muting in the user interface, though with \textsl{opposite colors}.
+   muting in the user-interface, though with \textsl{opposite colors}.
 
 \begin{figure}[H]
    \centering 
