--- a/tex/seq64_usr_file.tex
+++ b/tex/seq64_usr_file.tex
@@ -278,7 +278,7 @@
    the \texttt{--reveal-alsa-ports} option is \textsl{off} ("0");
    this command-line option can also be specified in the
    \texttt{[reveal-alsa-ports]} section of the "rc" file,
-   see \sectionref{subsec:seq64_rc_file_other_midi}, where this section is
+   see \sectionref{subsec:seq64_rc_file_reveal_ports}, where this section is
    discussed.
    Otherwise, the actual port names reported by ALSA are shown.
    The \texttt{user-midi-bus-definitions} and \texttt{user-midi-bus-N} sections
@@ -468,7 +468,7 @@
    "INI" group marker \texttt{[user-interface-settings]}.
 
    It provides for a feature we will hopefully be able to complete some day:
-   the complete specificition of the appearance of the user interface.
+   the complete specificition of the appearance of the user-interface.
    There is plenty of room to change the appearance of
    \textsl{Sequencer64} already!  Please try the settings and see what you
    like.
